[tool.poetry]
name = "py_sensor_filters"
version = "0.1.1.post1"
description = "Fast Signal Filters Wrapped in Python"
authors = ["underflow101 <ikarus125@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
