[metadata]
name = py-sensor-filters-pkg-underflow101
version = 0.1.1.post1
author = underflow101
author_email = ikarus125@gmail.com
description = Fast Signal Filters Wrapped in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/underflow101/py_filters
project_urls =
    Bug Tracker = https://github.com/underflow101/py_filters/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = py_sensor_filters
packages = find:
python_requires = >=3.6

[options.packages.find]
where = py_sensor_filters